Add support for Java version-specific JVM options (#597)
* feat: Add Java version-specific JVM options support

Added packJvmVersionSpecificOpts setting to configure JVM options per Java version.
This allows users to specify different JVM options based on the Java version being used.

Example usage:
```scala
packJvmVersionSpecificOpts := Map(
  "myapp" -> Map(
    8 -> Seq("-XX:MaxPermSize=256m"),
    11 -> Seq("-XX:+UseJVMCICompiler"),
    17 -> Seq("-XX:+UseZGC")
  )
)
```

The launcher scripts now detect the Java version at runtime and apply the appropriate
JVM options automatically. This is useful for applications that need to support
multiple Java versions with different optimal JVM settings.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: Address PR review comments for POSIX compliance and portability

- Made Unix launch script POSIX-compliant by replacing bash-specific syntax
  - Replaced [[ ]] with case statement for pattern matching
  - Removed use of BASH_REMATCH and regex operators
  - Removed local keyword for better shell compatibility

- Fixed Windows batch script to use standard -version instead of -fullversion
  - Ensures compatibility with all JVM implementations

- Updated test to use non-deprecated scala.jdk.CollectionConverters
  - Replaced deprecated scala.collection.JavaConverters import

These changes improve portability across different shell environments and
JVM implementations while maintaining the same functionality.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* docs: Add packJvmVersionSpecificOpts example to README

Added documentation and example usage for the new packJvmVersionSpecificOpts
setting that allows configuring Java version-specific JVM options.

The example shows how to configure different JVM options for Java 8, 11, 17,
and 21, demonstrating common use cases like:
- MaxPermSize for Java 8 (removed in J